split book upsert into create and update
