# be/code/application/api/src/main/java/org/theoriok/inventory/command/CreateBook.java
@@ -1,0 +1,11 @@
+package org.theoriok.inventory.command;
+
+import org.theoriok.inventory.BookId;
+import org.theoriok.inventory.domain.Book;
+
+public interface CreateBook {
+    Book create(Request request);
+
+    record Request(BookId id, String title, String author, String description) {
+    }
+}
