# be/code/application/api/src/main/java/org/theoriok/inventory/command/UpdateBook.java
@@ -1,0 +1,14 @@
+package org.theoriok.inventory.command;
+
+import org.theoriok.inventory.BookId;
+
+public interface UpdateBook {
+    Result update(Request request);
+
+    record Request(BookId id, String title, String author, String description) {
+    }
+
+    enum Result {
+        UPDATED, NOT_FOUND
+    }
+}
