# be/code/application/api/src/main/java/org/theoriok/inventory/command/UpsertBook.java
@@ -1,10 +1,0 @@
-package org.theoriok.inventory.command;
-
-import org.theoriok.inventory.BookId;
-
-public interface UpsertBook {
-    void upsert(Request request);
-
-    record Request(BookId businessId, String title, String author, String description) {
-    }
-}
