# be/code/infrastructure/inbound/rest/src/main/resources/api.yml
@@ -128,19 +128,23 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Book'
-    put:
+    post:
       tags:
         - book-controller
-      operationId: upsertBook
+      operationId: createBook
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpsertBook'
+              $ref: '#/components/schemas/CreateBook'
         required: true
       responses:
-        '204':
-          description: No-content
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Book'
         '400':
           description: Validation failed
           content:
@@ -167,6 +171,33 @@ paths:
                 $ref: '#/components/schemas/Book'
         '404':
           description: Book not found
+    put:
+      tags:
+        - book-controller
+      operationId: updateBook
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateBook'
+        required: true
+      responses:
+        '204':
+          description: No-content
+        '400':
+          description: Validation failed
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '404':
+          description: Book not found
     delete:
       tags:
         - book-controller
@@ -184,17 +215,29 @@ paths:
           description: Book not found
 components:
   schemas:
-    UpsertBook:
+    CreateBook:
       type: object
       required:
-        - business_id
         - title
         - author
         - description
       properties:
-        business_id:
+        title:
           type: string
           maxLength: 255
+        author:
+          type: string
+          maxLength: 255
+        description:
+          type: string
+          maxLength: 5000
+    UpdateBook:
+      type: object
+      required:
+        - title
+        - author
+        - description
+      properties:
         title:
           type: string
           maxLength: 255
@@ -253,7 +296,7 @@ components:
     Book:
       type: object
       properties:
-        business_id:
+        id:
           type: string
         title:
           type: string
