# be/code/infrastructure/outbound/postgres/src/main/java/org/theoriok/inventory/persistence/repositories/BookRepository.java
@@ -4,11 +4,8 @@ import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Repository;
 import org.theoriok.inventory.persistence.entities.BookEntity;
 
-import java.util.Optional;
 import java.util.UUID;
 
 @Repository
 public interface BookRepository extends JpaRepository<BookEntity, UUID> {
-
-    Optional<BookEntity> findByBusinessId(String businessId);
 }
